Refactor security configuration and implement JWT authentication